plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.udong'
version = '0.0.1-SNAPSHOT'
description = 'udong-be'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5' // JSON 파싱 (Jackson 기반)

	implementation "io.github.cdimascio:dotenv-java:3.0.2"
	implementation 'com.squareup.okhttp3:okhttp:4.11.0'
	implementation 'org.jetbrains:annotations:24.1.0'
	implementation platform("software.amazon.awssdk:bom:2.25.68")
	implementation "software.amazon.awssdk:s3"
	implementation "com.github.f4b6a3:ulid-creator:5.2.2"
	implementation 'io.micrometer:micrometer-registry-prometheus'

	implementation 'org.springframework.boot:spring-boot-starter-webflux'  // WebClient 포함됨

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'// swagger

}

tasks.named('test') {
	useJUnitPlatform()
}
